# DateSense

./: README.md  setup.cfg
datesense/: dsoptions.py
datesense/formats/: moment.py
src/datesense/: __init__.py  converter.py  dsoptions.py  dstoken.py
src/datesense/dsrules/: __init__.py  delimeter_rule.py  likely_range_rule.py  mutual_exclusive_rule.py  pattern_rule.py
tests/: DateSenseUnitTest.py  test_converter.py  test_datesense.py
