[metadata]
name = datesense
version = 1.1.0
author = Sophie Kirschner
author_email = sophiek@pineapplemachine.com
description = Package for detecting the format of a date string
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/humangeo/DateSense
project_urls =
    Bug Tracker = https://github.com/humangeo/DateSense/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src